[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 499.0
margin_bottom = 910.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 449.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 5 )
text = "The greatest 
score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 449.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 297.0
margin_right = 449.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the
Creeps"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 449.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 449.0
margin_bottom = 684.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Setting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 714.0
margin_right = 449.0
margin_bottom = 798.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
